# rwu-rv64iV2.0

./: .gitignore  CLAUDE.md  README.md
RWU_RV/RV_NoPipeline/: .~lock.project.odg#  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  READ.ME  READ.ME~  collect_errors.cmake  collect_errors.cmake~  memorymap.ods  project.odg  regression.txt
RWU_RV/RV_NoPipeline/cocotb/: .gitignore  Makefile  iss.py  test_poc.py  test_regression.py
RWU_RV/RV_NoPipeline/cocotb/programs/: instr01loadbyte.mem  instr03loadword.mem  instr06addi.mem  instr07slli.mem  instr08slti.mem  instr09sltiu.mem  instr10xori.mem  instr11srli.mem  instr12srai.mem  instr13ori.mem  instr14andi.mem  instr15auipc.mem  instr16sb.mem  instr17sh.mem  instr18sw.mem  instr19add.mem  instr20sub.mem  instr21sll.mem  instr22slt.mem  instr23sltu.mem  instr24xor.mem  instr25srl.mem  instr26sra.mem  instr27or.mem  instr28and.mem  instr30beq.mem  instr31bne.mem  instr32blt.mem  instr33bge.mem  instr34bltu.mem  instr35bgeu.mem  instr36jalr.mem  instr37jal.mem  instr38ld.mem  instr39lwu.mem  instr40addiw.mem  instr41slliw.mem  instr42srliw.mem  instr43sraiw.mem  instr44sd.mem  (+14 more)
RWU_RV/RV_NoPipeline/rv64Sim/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  READ.ME  allinstructions.asm~  dcache_test.asm  filldmem.asm~  hazard_ctrl_branch.asm  hazard_ctrl_jump.asm  hazard_raw_alu.asm  hazard_raw_load.asm  hazard_waw_war.asm  instr01loadbyte.asm  instr02loadhalf.asm  instr03loadword.asm  instr04loadbyteu.asm  instr05loadhalfu.asm  instr06addi.asm  instr06addi.asm~  instr08slti.asm  instr09sltiu.asm  instr10xori.asm  instr11srli.asm  instr12srai.asm  instr13ori.asm  instr14andi.asm  instr15auipc.asm  instr16sb.asm  instr17sh.asm  instr18sw.asm  instr19add.asm  instr20sub.asm  instr21sll.asm  instr22slt.asm  instr23sltu.asm  instr24xor.asm  instr25srl.asm  instr26sra.asm  instr27or.asm  (+43 more)
RWU_RV/RV_NoPipeline/sim/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile_SV  Makefile~  READ.ME  boot.wcfg  csr01.wcfg  dmem.wcfg  dmemsync.wcfg  gpio.wcfg  irq.wcfg  irq2.wcfg  loadim.wcfg  riscvtest.mem~  riscvtest_tb_instr02loadhalf.mem  riscvtest_tb_instr04loadbyteu.mem  riscvtest_tb_instr05loadhalfu.mem  riscvtest_tb_instr99loadimem.mem  riscvtest_tb_rv64i.mem  scan01.wcfg  scanpath.wcfg  tb_waivers.vlt  test_cpu.py  xsim_cfg.tcl
RWU_RV/RV_NoPipeline/spec/: 00_example_all.tex  00_rwurv64i_all.tex  00_rwurv64i_all.tex~  00_rwurv64i_top.tex  00_rwurv64i_top.tex~  01_docover_history_tab01.tex  01_docover_history_tab01.tex~  01_docover_history_tab02.tex  01_docover_tab01.tex  01_docover_tab02.tex  01_docover_tab03.tex  01_docover_text01.tex  01_docover_text02.tex  01_docover_text02.tex~  01_docover_text03.tex  01_docover_text03.tex~  01_example_bild01.tex  01_example_liste01.tex  01_example_tab01.tex  01_example_text01.tex  01_requirements_tab01.tex  04_alu_tab01.tex~  04_alu_tab04.tex~  04_alu_text06.tex~  05_gpio_author_tab01.tex~  05_gpio_history_tab02.tex~  05_gpio_tab02.tex~  05_gpio_text02.tex~  05_gpio_text05.tex~  05_gpio_text06.tex~  05_gpio_text07.tex~  05_gpio_text09.tex~  Makefile  Makefile~  RWU_RV64I_Cache_Analysis.xlsx  as_literature.bib  cleanIt.sh  drawings01.odg  gen_cache_analysis.py  latex_all_asheader_en.tex  (+3 more)
RWU_RV/RV_NoPipeline/spec/02_prod/: 02_history_tab01.tex  02_product_bild01.tex  02_product_bild02.tex  02_product_bild03.tex  02_product_history_tab01.tex  02_product_history_tab02.tex  02_product_history_tab03.tex  02_product_history_tab04.tex  02_product_liste01.tex  02_product_tab01.tex  02_product_text01.tex  02_product_text02.tex  02_product_text03.tex  02_product_text04.tex  02_product_text05.tex  02_product_text06.tex  02_product_text07.tex  02_product_text08.tex  02_product_text09.tex  02_product_text10.tex  02_product_text11.tex  02_product_text12.tex  02_product_text13.tex  02_product_text16.tex  02_product_text18.tex  02_product_text19.tex  (+3 more)
RWU_RV/RV_NoPipeline/src/: Read.me  Read.me~  asAlu.sv  asAlu.sv~  asAluBr.sv  asAluBr.sv~  asCPU.sv~  asCPUx.sv  asCPUx.sv~  asCPUx_pipeline.sv  asCguCore.sv~  asCguTop.sv~  asControlAll.sv  asControlAll.sv~  asDMem.sv~  asDMemBack.sv~  asDMemCore.sv~  asDMemFront.sv~  asDecode.sv  asDecode.sv~  asGpio.sv~  asGpioTop.sv~  asIMem.sv  asIMem.sv~  asInstrDecode.sv  asInstrDecode.sv~  asMBpi.sv  asMBpi.sv~  asRegFile.sv  asSBpi.sv  asSBpi.sv~  asSBpiMem.sv~  asTopMem.sv  asTopMem.sv~  as_forwarding_unit.sv  as_hazard_unit.sv  as_pack.sv  as_pack.sv~
RWU_RV/RV_NoPipeline/syn/: Zybo-Master.xdc  Zybo-Master.xdc~
RWU_RV/RV_NoPipeline/tb/: tb_rv64i.sv  tb_rv64i_allinstructions.sv  tb_rv64i_allinstructions.sv~  tb_rv64i_filldmem.sv  tb_rv64i_filldmem.sv~  tb_rv64i_instr.sv  tb_rv64i_instr01loadbyte.sv  tb_rv64i_instr01loadbyte.sv~  tb_rv64i_instr02loadhalf.sv  tb_rv64i_instr02loadhalf.sv~  tb_rv64i_instr03loadword.sv  tb_rv64i_instr03loadword.sv~  tb_rv64i_instr04loadbyteu.sv  tb_rv64i_instr04loadbyteu.sv~  tb_rv64i_instr05loadhalfu.sv  tb_rv64i_instr05loadhalfu.sv~  tb_rv64i_instr06addi.sv  tb_rv64i_instr06addi.sv~  tb_rv64i_instr07slli.sv  tb_rv64i_instr07slli.sv~  tb_rv64i_instr19add.sv  tb_rv64i_instr19add.sv~  tb_rv64i_instr29lui.sv  tb_rv64i_instr29lui.sv~  tb_rv64i_instr99loadimem.sv  tb_rv64i_instr99loadimem.sv~  tb_rv64i_instr99scantest.sv  tb_rv64i_instr99scantest.sv~  tb_rv64i_instr99scantest_1.sv  tb_rv64i_jtag.sv  tb_rv64i_jtag.sv~  tb_rv64i_readgpioid.sv  tb_rv64i_readgpioid.sv~  tb_rv64i_test_trap.sv  tb_rv64i_uart_rx.sv  tb_rv64i_uart_tx.sv  tb_rv64ix.sv
RWU_RV/RV_NoPipelineCache/: CMakeLists.txt  regression.txt
RWU_RV/RV_NoPipelineCache/sim/: CMakeLists.txt  tb_waivers.vlt
RWU_RV/RV_NoPipelineCache/src/: asCPUx.sv  asTopMem.sv
RWU_RV/RV_NoPipelineCache/tb/: tb_rv64i_dcache_test.sv  tb_rv64i_instr.sv  tb_rv64i_instr01loadbyte.sv  tb_rv64i_instr02loadhalf.sv  tb_rv64i_instr03loadword.sv  tb_rv64i_instr04loadbyteu.sv  tb_rv64i_instr05loadhalfu.sv  tb_rv64i_instr06addi.sv  tb_rv64i_instr07slli.sv  tb_rv64i_instr19add.sv  tb_rv64i_instr29lui.sv  tb_rv64i_memory_sections.sv  tb_rv64i_readgpioid.sv  tb_rv64i_scratchpad_intensive.sv  tb_rv64i_uart_tx.sv
(+249 files in other folders)
